--- a/app.ini
+++ b/app.ini
@@ -25,4 +25,6 @@ TARGET = https://github.com/macaron-contrib/docs.git
 SECRET = macaron
 
 [extension]
+ENABLE_DISQUS = true
+DISQUS_SHORT_NAME = macarondocs
 HIGHLIGHTJS_CUSTOM_CSS = /css/zenburn.css
