--- a/app.ini
+++ b/app.ini
@@ -8,7 +8,7 @@ DESC = Package macaron is a high productive and modular design web framework in 
 URL = http://go-macaron.com
 
 [page]
-HAS_LANDING_PAGE = false
+USE_CUSTOM_TPL = true
 
 [navbar.github]
 ICON = github
