--- a/app.ini
+++ b/app.ini
@@ -4,7 +4,7 @@ HTTP_PORT = 5557
 [site]
 NAME = Macaron Docs
 # HTML description meta
-DESC = Package macaron is a high productive and modular design web framework in Go.
+DESC = Package macaron is a high productive and modular web framework in Go.
 URL = http://go-macaron.com
 
 [page]
@@ -13,14 +13,14 @@ USE_CUSTOM_TPL = true
 [navbar.github]
 ICON = github
 LOCALE = GitHub
-LINK = https://github.com/Unknwon/macaron
+LINK = https://github.com/go-macaron/macaron
 BLANK = true
 
 [docs]
 # "local" or "remote"
 TYPE = remote
 # Local path or remote Git address
-TARGET = https://github.com/macaron-contrib/docs.git
+TARGET = https://github.com/go-macaron/docs.git
 # URL query paramter '?secret=xxx' for validation
 SECRET = macaron
 
