--- a/app.ini
+++ b/app.ini
@@ -25,6 +25,8 @@ TARGET = https://github.com/go-macaron/docs.git
 SECRET = macaron
 
 [extension]
+ENABLE_EDIT_PAGE = true
+EDIT_PAGE_LINK_FORMAT = https://github.com/go-macaron/docs/blob/master/{lang}/{blob}
 ENABLE_DISQUS = true
 DISQUS_SHORT_NAME = macarondocs
 HIGHLIGHTJS_CUSTOM_CSS = /css/zenburn.css
